2007-02-16  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/ipmiconsole/Makefile.am: Remove unnecessary
	compile option.
	
2007-02-15  Albert Chu <chu11@llnl.gov>

	* DISCLAIMER.ZRESEARCH: Removed.

	* Makefile.am, freeipmi.spec.in: Removed DISCLAIMER.ZRESEARCH.
	
2007-02-14  Albert Chu <chu11@llnl.gov>

	* ipmimonitoring/libipmimonitoring/Makefile.am,
	ipmimonitoring/libipmisdrcache/Makefile.am,
	ipmiconsole/libipmiconsole/Makefile.am: Compile with -D_REENTRANT.
	
2007-02-09  Anand V. Avati <avati@zresearch.com>

	* ipmi-chassis/ipmi-chassis.8.pre.in: added missing file
	* ipmi-chassis/src/*: intermediary commit with bugfixes
	
2007-02-09  Anand V. Avati <avati@zresearch.com>

	ipmi-chassis - intermediate commit with --get-capabilities
	support
	
	* ipmi-chassis/*: command line tool for IPMI chassis functionality
	* configure.ac: updated
	* Makefile.am: updated
	* libfreeipmi/src/ipmi-chassis-cmds.c:
	* libfreeipmi/src/udm/ipmi-chassis-cmds.c: added missing commands
	* libfreeipmi/include/freeipmi/ipmi-chassis-cmds.h:
	* libfreeipmi/include/freeipmi/udm/ipmi-chassis-cmds-udm.h:
                      prototyped missing commands
	
2007-02-06  Albert Chu <chu11@llnl.gov>

	* ipmimonitoring/src/libipmisdrcache/Makefile.am: Don't install
	libipmisdrcache.
	
2007-02-05  Albert Chu <chu11@llnl.gov>

	* freeipmi.spec.in: Add ipmimonitoring sdr cache directory.

2007-02-05  A Balamurugan  <bala@zresearch.com>

	* ipmi-pef/src/ipmi-pef.h: new file.
	* ipmi-pef/src/Makefile.am: updated.
	* ipmi-pef/src/ipmi-pef-argp.[ch], ipmi-pef/src/ipmi-pef.c:
	removed globals.

2007-02-05  Albert Chu <chu11@llnl.gov>

	* freeipmi.spec.in: Add ipmimonitoring docs.
	
2007-02-02  Albert Chu <chu11@llnl.gov>

	* ipmi-sel/ipmi-sel.8.pre.in, ipmi-sensors/ipmi-sensors.8.pre.in:
	Fix typos.

	* ipmi-sel/src/ipmi-sel-argp.c,
	ipmi-sensors/src/ipmi-sensors-argp.c: Fix argp options order.
	
2007-02-01  Albert Chu <chu11@llnl.gov>

	* ipmi-raw/src/ipmi-raw.c (string2bytes, ipmi_raw_stream): Pass