@@ -2,6 +2,10 @@
 
 	* ipmiconsole/src/ipmiconsole/Makefile.am: Remove unnecessary
 	compile option.
+
+	* freeipmi.spec.in: Split of ipmimonitoring into a subpackage.
+
+	* configure.ac: Fix make dist issue w/ long filenames.
 	
 2007-02-15  Albert Chu <chu11@llnl.gov>
 
